--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,6 +35,9 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="POST" action="/urls/9sm5xK/delete"><button type="submit" class="btn btn-danger">Delete</button></form>
+              </td>
             </tr>
           <% } %>
         </tbody>
