--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,7 +36,7 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
               <td>
-                <form method="POST" action="/urls/9sm5xK/delete"><button type="submit" class="btn btn-danger">Delete</button></form>
+                <form method="POST" action="/urls/<%= id %>/delete"><button type="submit" class="btn btn-danger">Delete</button></form>
               </td>
             </tr>
           <% } %>
