add form that submits an updated longURL/ add Edit buttons and update new link

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -25,7 +25,7 @@
       <%# Edit URL %>
       <div class="card-footer text-muted">
         <h5>Edit</h5>
-        <form method="POST" action="/urls/<%= id %>/edit">
+        <form method="POST" action="/urls/<%= id %>">
           <p>
             New URL:
             <input type="text" name="longURL">
