up-to-date with login/register/logout features

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,10 @@
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         </div>
       </div>
+
       <div>
-        <% if(user){ %>
-          <form class="form-inline" method="POST" action="/logout">
+        <% if (user) { %>
+          <form method="POST" action="/logout">
           <p class='navbar-text nav-link' style='margin-bottom: 0;'>Logged in as: <%= user.email %></p>
           <button type="submit" class="btn btn-outline-dark">Logout</button>
           </form>
