--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,6 +14,8 @@
 
   <body>
 
+    <%- include('partials/_header') %> 
+    
     <h1> Register</h1>
     <p>Please fill in this form to create an account</p>
 
