fixing urls display in show

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -28,7 +28,7 @@
         <form method="POST" action="/urls/<%= id %>">
           <p>
             New URL:
-            <input type="text" name="longURL">
+            <input value="<%= longURL %>" type="text" name="longURL">
             <button class="btn-primary" type="submit" value="Submit">Submit</button>
           </p>
         </form>
